part3/3.08/manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: todo-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/BACKEND_IMAGE:TAG
          ports:
            - containerPort: 5001
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
