part3/3.08/manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-main
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 5001
