part3/3.08/manifests/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
  namespace: todo-main
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 5001
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 5001
